Test/errors/err_nullable_primitive.cb
extern int main()
{
    expect_error("nullable '?' is not allowed on primitive type 'int'");
    int? x = 0;
    return 0;
}
